--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,10 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+@layer base {
+  ul,
+  ol {
+    list-style: revert;
+  }
+}
